[package]
name = "russhd"
version = "0.1.0"
edition = "2021"

[features]
eyra-as-std = ["dep:std"]

[dependencies]
anyhow = "1.0.94"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
data-encoding = "2.6.0"
futures = "0.3.31"
log = "0.4.22"
pretty_env_logger = "0.5.0"
ssh-key = { version = "0.6.7", features = [
    "ed25519",
    "std",
], default-features = false }
thrussh = "0.35.6"
thrussh-keys = "0.22.1"
tokio = { version = "1.42.0", features = ["macros"] }
std = { version = "0.19.1", package = "eyra", optional = true }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
